--- a/gen.js/build.gradle
+++ b/gen.js/build.gradle
@@ -1,5 +1,6 @@
 description = 'GumTree tree generator for JavaScript code (Rhino based).'
 
 dependencies {
-	//compile 'org.mozilla:rhino:1.7.7'
+	//compile 'org.mozilla:rhino:1.7.7',
+	compile 'org.apache.commons:commons-lang3:3.5'
 }
