--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,5 +1,12 @@
 description = 'GumTree core module.'
 
+apply plugin: 'java'
+apply plugin: 'maven'
+
+group = 'myGroup'
+// artifactId is taken by default, from folder name
+version = '0.1-SNAPSHOT'
+
 dependencies {
 	compile 'com.github.mpkorstanje:simmetrics-core:3.2.3'
 	compile 'net.sf.trove4j:trove4j:3.0.3'
